--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/xinPmcG6M/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/FgauoPNN7/",
     "classDetails": [
         {
             "name": "강아지",
