--- a/settings.json
+++ b/settings.json
@@ -18,7 +18,7 @@
         {
             "name": "2",
             "title": "G",
-            "explain": "",
+            "explain": "맨날 그린..",
             "celeb": "",
             "color": "rgba(59, 255, 0, 1)"
         },
