--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,9 @@
 {
+    "pageTitle": "나만의 동물상 테스트",
+    "mainTitle": "나만의 동물상 테스트",
+    "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
+    "footerText": "&copy; 내이름 2024. All Rights Reserved.",
+    
     "modelUrl": "https://teachablemachine.withgoogle.com/models/FgauoPNN7/",
     "classDetails": [
         {
