--- a/settings.json
+++ b/settings.json
@@ -1,30 +1,41 @@
 {
-    "pageTitle": "나만의 동물상 테스트",
-    "mainTitle": "난 무슨 동물상일까",
-    "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
+    "pageTitle": "나이 테스트",
+    "mainTitle": "내 얼굴 나이는?",
+    "subtitle": "얼굴로 보는 인공지능 나이 테스트",
     "footerText": "&copy; 태영테크 2024. All Rights Reserved.",
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/FgauoPNN7/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/-OCgH_cKJ/",
     "classDetails": [
         {
-            "name": "강아지",
-            "title": "강아지상",
-            "explain": "다정다감하고 귀여운 당신은 모든 사람들에게 즐거움을 주는 호감형이다! 상냥하고 활발한 성격으로 어디에서도 인기폭발이지만, 애교와 웃음이 많아 연인에게 특히나 사랑스럽다. 당신은 애인바라기로 애인의 관심이 부족하면 시무룩해지고 외로움을 타는 모습이 마치 강아지와 똑 닮았다!",
-            "celeb": "강아지상 연예인: 박보영, 아이유, 윤승아, 민아(걸스데이), 한지민",
+            "name": "젊음",
+            "title": "젊은얼굴",
+            "explain": "젊은 얼굴은 일반적으로 주름과 잔주름이 없고 자연스러운 광채가 나는 부드럽고 깨끗한 피부를 가지고 있습니다. 볼은 종종 통통하고 둥글며 젊고 통통한 느낌을 줍니다. 피부에는 자연스러운 탄력과 탄력이 있으며, 턱선은 대개 잘 정의되어 있습니다. 눈은 밝고 깨끗하며 종종 눈밑 서클이나 붓기가 최소화됩니다. 입술은 도톰하고 부드러우며 윤곽이 뚜렷합니다. 전반적으로 젊은 얼굴은 피부 톤이 균일하고 노화의 징후가 최소화되어 신선함과 활력을 발산합니다.",
             "color": "rgba(27, 175, 234, 1)"
         },
         {
-            "name": "말",
-            "title": "말상",
-            "explain": "활발하고 에너지가 넘치는 당신은 첫인상부터 밝고 친근한 이미지를 준다. 명랑하고 긍정적인 태도로 주변 사람들을 기분 좋게 만들며, 사교성이 뛰어나 항상 사람들 사이에서 인기가 많다. 주도적이고 자신감 넘치며, 상황을 주도하는 리더십을 가지고 있어 어디서든 눈에 띈다. 따뜻하고 다정한 성격으로 애인에게 항상 신뢰와 안정감을 주는 당신은 말과 닮았다!",
-            "celeb": "말상 연예인: 박보영, 박민영, 한지민, 이나영, 임윤아(소녀시대)",
+            "name": "중년",
+            "title": "중년얼굴",
+            "explain": "중년의 얼굴은 일반적으로 자연스러운 구조와 성격을 대부분 유지하면서 노화의 징후를 어느 정도 보여줍니다. 피부에는 잔주름과 주름이 몇 개 있을 수 있으며, 특히 눈(눈가주름), 입(웃음 주름), 이마 주변에 주름이 생길 수 있습니다. 특히 턱선과 볼 주변에 약간의 처짐이나 탄력 손실이 있을 수 있습니다.
+
+검버섯이나 과다색소침착 부위가 나타나 피부 톤이 더욱 고르지 않게 될 수 있습니다. 볼의 자연스러운 통통함이 줄어들기 시작하여 약간 더 움푹 패인 것처럼 보일 수 있습니다. 눈 밑 처짐이나 다크서클이 더욱 눈에 띄게 나타날 수 있습니다.
+
+눈은 종종 풍부한 삶의 경험을 반영하며 여전히 반짝일 수 있지만 미묘한 피로의 징후를 보일 수도 있습니다. 입술은 젊었을 때의 충만함과 선명함을 어느 정도 잃을 수 있으며, 입 주위에 잔주름이 생길 수 있습니다.
+
+전반적으로 중년의 얼굴은 개인의 자연스러운 아름다움과 성격을 대부분 유지하면서 노화의 초기 단계로 표시되는 성숙도와 활력 사이의 균형을 반영하는 경우가 많습니다.",
             "color": "rgba(251, 176, 59, 1)"
         },
         {
-            "name": "고양이",
-            "title": "고양이상",
-            "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!",
-            "celeb": "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
+            "name": "늙음",
+            "title": "늙은얼굴",
+            "explain": "늙은 얼굴은 일반적으로 노화의 두드러진 징후와 풍부한 성격 및 삶의 경험을 나타냅니다. 피부에는 특히 눈(눈가주름), 입(미소선), 이마 및 목 주위에 상당한 주름과 잔주름이 있는 경우가 많습니다. 이 선은 깊이와 개수가 다양할 수 있으며, 종종 수년에 걸친 사람의 얼굴 표정과 습관을 반영합니다.
+
+피부는 탄력과 견고함의 상실로 인해 더 얇고 더 약해 보일 수 있습니다. 이로 인해 특히 볼, 턱선, 목 주변의 처짐이 발생하여 턱살이나 이중턱이 생길 수 있습니다. 검버섯, 흑점 및 기타 과다 색소 침착 부위가 흔하며 피부 톤이 고르지 않게 됩니다.
+
+일반적으로 얼굴의 자연스러운 통통함과 볼륨감이 감소하여 볼이 더 움푹 들어가고 눈이 더 움푹 들어간 것처럼 보입니다. 눈 밑 처짐과 다크서클이 더 두드러지는 경우가 많습니다. 입술이 얇아지고 윤곽이 덜 뚜렷해지며 입술 주위에 수직선이 나타날 수 있습니다.
+
+눈은 잠재적인 피곤함의 징후에도 불구하고 종종 평생의 경험과 지혜를 암시하는 깊고 반사적인 특성을 유지합니다. 머리카락이 있는 경우 가늘어지거나 회색이 되어 얼굴의 눈에 띄는 모습을 더해줍니다.
+
+전반적으로, 늙은 얼굴은 시간의 흐름에 대한 증거이며, 노화의 누적된 영향을 특징으로 하지만 동시에 풍부한 성격을 지니고 있어 개인의 인생 여정에 대한 독특한 이야기를 전달합니다.",
             "color": "rgba(265, 100, 50, 1)"
         }
     ]
