--- a/settings.json
+++ b/settings.json
@@ -15,7 +15,7 @@
         },
         {
             "name": "Cuman Helmet",
-            "title": "쿠만 면갑상",
+            "title": "쿠만 투구상",
             "explain": "활발하고 에너지가 넘치는 당신은 첫인상부터 밝고 친근한 이미지를 준다. 명랑하고 긍정적인 태도로 주변 사람들을 기분 좋게 만들며, 사교성이 뛰어나 항상 사람들 사이에서 인기가 많다. 주도적이고 자신감 넘치며, 상황을 주도하는 리더십을 가지고 있어 어디서든 눈에 띈다. 따뜻하고 다정한 성격으로 애인에게 항상 신뢰와 안정감을 주는 당신은 말과 닮았다!",
             "celeb": "말상 연예인: 박보영, 박민영, 한지민, 이나영, 임윤아(소녀시대)",
             "color": "rgba(251, 176, 59, 1)"
