--- a/settings.json
+++ b/settings.json
@@ -8,21 +8,21 @@
     "classDetails": [
         {
             "name": "Great Helm",
-            "title": "그레이트 헬름상",
+            "title": "Great Helm",
             "explain": "다정다감하고 귀여운 당신은 모든 사람들에게 즐거움을 주는 호감형이다! 상냥하고 활발한 성격으로 어디에서도 인기폭발이지만, 애교와 웃음이 많아 연인에게 특히나 사랑스럽다. 당신은 애인바라기로 애인의 관심이 부족하면 시무룩해지고 외로움을 타는 모습이 마치 강아지와 똑 닮았다!",
             "celeb": "",
             "color": "rgba(27, 175, 234, 1)"
         },
         {
             "name": "Cuman Helmet",
-            "title": "쿠만 투구상",
+            "title": "Cuman Helmet",
             "explain": "활발하고 에너지가 넘치는 당신은 첫인상부터 밝고 친근한 이미지를 준다. 명랑하고 긍정적인 태도로 주변 사람들을 기분 좋게 만들며, 사교성이 뛰어나 항상 사람들 사이에서 인기가 많다. 주도적이고 자신감 넘치며, 상황을 주도하는 리더십을 가지고 있어 어디서든 눈에 띈다. 따뜻하고 다정한 성격으로 애인에게 항상 신뢰와 안정감을 주는 당신은 말과 닮았다!",
             "celeb": "말상 연예인: 박보영, 박민영, 한지민, 이나영, 임윤아(소녀시대)",
             "color": "rgba(251, 176, 59, 1)"
         },
         {
             "name": "Kabuto",
-            "title": "카부토상",
+            "title": "Kabuto",
             "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!",
             "celeb": "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
             "color": "rgba(265, 100, 50, 1)"
