--- a/settings.json
+++ b/settings.json
@@ -9,7 +9,7 @@
         {
             "name": "Great Helm",
             "title": "Great Helm",
-            "explain": "사람이 아니군요.",
+            "explain": "나머지 두 후보들에 비하면 가장 사람과 동떨어진 생김새입니다.",
             "celeb": "",
             "color": "rgba(27, 175, 234, 1)"
         },
