--- a/settings.json
+++ b/settings.json
@@ -23,7 +23,7 @@
         {
             "name": "Kabuto",
             "title": "Kabuto",
-            "explain": "일본의 멘구는 무섭게 생긴 얼굴이 특징입니다만... 자료가 부실합니다. 아무튼 사람처럼 생겼다는 뜻이니 기뻐하십시오 휴먼",
+            "explain": "일본의 멘구는 무섭게 생긴 얼굴이 특징입니다만... 수집한 자료가 부실합니다. 대부분의 사람은 카부토가 나오니 평범하게 생기셨다 볼 수 있습니다.",
             "celeb": "",
             "color": "rgba(265, 100, 50, 1)"
         }
